@@ -32,6 +32,9 @@ int max_open_files = 0;
 vampir_file_t *fd_to_vampirid = NULL;
 
 
+/*
+ * store_vampir_file_id() must be run in a critical section if OpenMP is used! 
+ */
 static void store_vampir_file_id(int fd, uint32_t file_id,
     uint32_t file_group_id)
 {
@@ -45,14 +48,7 @@ static void store_vampir_file_id(int fd, uint32_t file_id,
 #endif
   file_ptr->vampir_file_id = file_id;
   file_ptr->vampir_file_group_id = file_group_id;
-# if defined (VT_OMPI) || defined (VT_OMP)
-#   pragma omp critical (vt_iofile_1)
-  {
-# endif
-    file_ptr->handle_id = global_handle_counter++;
-# if defined (VT_OMPI) || defined (VT_OMP)
-  }
-# endif
+  file_ptr->handle_id = global_handle_counter++;
 }
 
 vampir_file_t *get_vampir_file(int fd)
@@ -81,7 +77,7 @@ int get_total_open_files(int max_open_files)
 {
 #if defined (VT_OMPI) || defined (VT_OMP)
   /* alloc numthreads * max_open_files entries */
-  return (max_open_files * omp_get_thread_num());
+  return (max_open_files * omp_get_max_threads());
 #else
   return max_open_files;
 #endif
@@ -95,7 +91,14 @@ void vt_iofile_open(const char* fname, int fd)
   /* fprintf( stderr, "opening file: %s\n", fname); */
 
   gid=(fd<3) ? file_group_id_stdio : file_group_id_rest;
+#if defined (VT_OMPI) || defined (VT_OMP)
+# pragma omp critical
+  {
+#endif
   fid = vt_def_fileio(fname, gid);
   store_vampir_file_id(fd, fid, gid);
+#if defined (VT_OMPI) || defined (VT_OMP)
+  }
+#endif
 }
 
