@@ -193,6 +193,7 @@
 	- fixed a portability bug: use own implementation of function
 	  'strdup()'
 	- removed variadic macros (they were introduced in C99)
+	- fixed potential race condition by using OpenMP + LIBC's I/O tracing
 	- fixed a bug for determining the timer-resolution for ITC
 	- added check if we can link '-lz' in order to pass either '-lotf -lz'
 	  or just '-lotf' as OTF link option
